--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,inital-scale=1.0,
     maximum-scale=1.0,user-scalable=no">
+    	<link rel="stylesheet" type="text/css" href="/static/css/animate.css">
 		<link rel="stylesheet" type="text/css" href="/static/css/reset.css">
 		<link rel="stylesheet" type="text/css" href="/static/css/pub.css">
 		<title>myroutereleme</title>
